# Terminal-Video-Player

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: AppProps.h.in
src/: About.cpp  About.hpp  colors.cpp  colors.hpp  main.cpp  process.cpp  process.hpp  utils.cpp  utils.hpp
src/lib/: getch.c  getch.h  playAudio.c  playAudio.h  winSize.c  winSize.h
